...
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_search_simple"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/simple_search_hint"
                            android:imeOptions="actionSearch"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>
...
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/gallery"
                        android:padding="8dp"
                        android:src="@android:drawable/ic_menu_gallery" />

                    <Button
                        android:id="@+id/btn_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/search_button" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_toggle_advanced_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
...
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_search_editor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/item_editor_hint" />
                    </com.google.android.material.textfield.TextInputLayout>
                    
                    <LinearLayout
...
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="4dp"
                            android:hint="@string/item_year_hint">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_search_year"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
...
                        android:paddingBottom="4dp"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        tools:text="15 résultats pour la recherche : Éditeur" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_search_results"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </FrameLayout>
...
